--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="about-img">
                       <img style="box-shadow: 0 25px 8px -10px rgba(0, 0, 0, 0.1);
                       height: 150px;
-                      width: 150px;" src="https://cdn.discordapp.com/attachments/840836094294491176/886652967007158322/discord-wumpus.gif" class="img-fluid rounded b-shadow-a" alt="">
+                      width: 150px;" src="https://cdn.discordapp.com/attachments/840836094294491176/888747379619164180/cutepiv.png" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7" style="margin-top: 5%;">
