--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4">I am Kaushtub Gautam</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Programmer/Coder , Web Developer,Discord Bot Developer , High school student , Indian 🇮🇳</span><strong class="text-slider"></strong></p>
+          <h1 class="intro-title mb-4">Kaushtub Gautam</h1>
+          <p class="intro-subtitle"><span class="text-slider-items">Sustainability, Block-chain, A.I, Entrepreneur, Indian 🇮🇳</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -84,35 +84,32 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <div class="box-shadow-full">
+          <div class="box-shadow-full" >
             <div class="row">
+      
               <div class="col-md-6">
                 <div class="row">
+                  <img src="" alt="">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
                       <img style="box-shadow: 0 25px 8px -10px rgba(0, 0, 0, 0.1);
                       height: 150px;
-                      width: 150px;" src="https://cdn.discordapp.com/attachments/840836094294491176/888747379619164180/cutepiv.png" class="img-fluid rounded b-shadow-a" alt="">
+                      width: 150px;" src="https://cdn.discordapp.com/attachments/956888072342097930/1324652258042052789/image.png?ex=6778ee0d&is=67779c8d&hm=ac955eb3588b6715096058d2a8775e2ac0330d8d5ecac389b3e96f63b7dc6a5e&" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7" style="margin-top: 5%;">
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>Kaushtub Gautam</span></p>
-                      <p><span class="title-s">Age: </span> <span>15+</span></p>
-                      <p><span class="title-s">Email: </span> <span> <br>kaushtubkg@gmail.com</span></p>
-                      <p><span class="title-s">Languages (I can speak): </span> <span><br>English <br>Hindi </span></p>
-                      <p><span class="title-s">My Hobbies: </span> <span> <br>Programming/Coding <br>Basketball  <br>Ethical Hacking{White Hat}</span></p>
+                      <p><span class="title-s">Age: </span> <span>18</span></p>
+                      <p><span class="title-s">Email: </span> <span>kaushtubgautam@gmail.com</span></p>
                       <h5 class="title-left">
                         About me
                       </h5>
                       <p  class="lead"> <h6 style="color: brown;"> Hey👋! Peeps... <br>
-                        My name is Kaushtub Gautam😎 </h6> <p style="color: #FF9F35">➜ I'm a rookie programmer💻 and always ready to take new challenges and loves learning📚 new things .
-                        <br>
-                        </p>
-                        <p style="color: blue;">➜ I also like to play Basketball🏀 and obviously I like programming💻 a lot </p>
+                        </h6>
 
-                      <p>➜ I’m currently working on <a href="https://dsc.gg/multy" style="color: chartreuse;"> Discord Bots </a>
-                        <a  href="https://dsc.gg/multy" class="text-gray-500">
+                      <p>➜ I’m currently working on <a href="https://bitcoin.org/bitcoin.pdf" style="color: chartreuse;"> Blockchain </a>
+                        <a  href="https://bitcoin.org/bitcoin.pdf" class="text-gray-500">
                           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-discord" viewBox="0 0 16 16">
                               <path d="M6.552 6.712c-.456 0-.816.4-.816.888s.368.888.816.888c.456 0 .816-.4.816-.888.008-.488-.36-.888-.816-.888zm2.92 0c-.456 0-.816.4-.816.888s.368.888.816.888c.456 0 .816-.4.816-.888s-.36-.888-.816-.888z"/>
                               <path d="M13.36 0H2.64C1.736 0 1 .736 1 1.648v10.816c0 .912.736 1.648 1.64 1.648h9.072l-.424-1.48 1.024.952.968.896L15 16V1.648C15 .736 14.264 0 13.36 0zm-3.088 10.448s-.288-.344-.528-.648c1.048-.296 1.448-.952 1.448-.952-.328.216-.64.368-.92.472-.4.168-.784.28-1.16.344a5.604 5.604 0 0 1-2.072-.008 6.716 6.716 0 0 1-1.176-.344 4.688 4.688 0 0 1-.584-.272c-.024-.016-.048-.024-.072-.04-.016-.008-.024-.016-.032-.024-.144-.08-.224-.136-.224-.136s.384.64 1.4.944c-.24.304-.536.664-.536.664-1.768-.056-2.44-1.216-2.44-1.216 0-2.576 1.152-4.664 1.152-4.664 1.152-.864 2.248-.84 2.248-.84l.08.096c-1.44.416-2.104 1.048-2.104 1.048s.176-.096.472-.232c.856-.376 1.536-.48 1.816-.504.048-.008.088-.016.136-.016a6.521 6.521 0 0 1 4.024.752s-.632-.6-1.992-1.016l.112-.128s1.096-.024 2.248.84c0 0 1.152 2.088 1.152 4.664 0 0-.68 1.16-2.448 1.216z"/>
@@ -175,6 +172,7 @@
                     <div class="col-md-12 col-lg-9 job-description">
                       <h6 class="font-weight-bold"> <a href="https://www.w3.org/html/" target="_blank"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg" alt="html5" width="40" height="40"/>  Html</h6>
                         <h6 class="font-weight-bold"> <a href="https://www.w3schools.com/css/" target="_blank"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg" alt="css3" width="40" height="40"/> Css</h6>
+                          <h6 class="font-weight-bold"> <a href="https://cdn.discordapp.com/attachments/956888072342097930/1324655391904370769/image.png?ex=6778f0f8&is=67779f78&hm=ce245dc6d9ffa1f131baba9e189055f2c7196faa697b5f30e2169390f2ac9bb6&" target="_blank"> <img src="https://cdn.discordapp.com/attachments/956888072342097930/1324655391904370769/image.png?ex=6778f0f8&is=67779f78&hm=ce245dc6d9ffa1f131baba9e189055f2c7196faa697b5f30e2169390f2ac9bb6&" alt="react" width="40" height="40"/> </a>Blockchain</h6>
                           <h6 class="font-weight-bold"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg" alt="javascript" width="40" height="40"/> </a>  JavaScript</h6>
                           <h6 class="font-weight-bold"> <a href="https://www.linux.org/" target="_blank"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/linux/linux-original.svg" alt="linux" width="40" height="40"/> </a> Linux Os</h6>  
                           <h6 class="font-weight-bold">  <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mysql/mysql-original-wordmark.svg" alt="mysql" width="40" height="40"/> </a> SqL</h6>
