--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
   <section id="service" class="services-mf route">
               <div class="card mt-5" style="padding: 5%">
-                <h3 class="font-weight-bold sideline mb-3">Contact</h3>
+                <h3 class="font-weight-bold sideline mb-3">Contact Me</h3>
                 <div class="timeline"></div>
                   <div class="job row">
                     <div class=""><i 
