--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                     Always Learning, Always Building
                 </p>
                 <p class="mt-6 text-xl text-slate-300 leading-relaxed">
-                    I'm currently deep-diving into <strong class="text-white">[Your Current Technology, e.g., Rust and Substrate]</strong> to build a <strong class="text-white">[Your Current Project, e.g., high-performance oracle for real-world sustainability data]</strong>.
+                    I'm currently deep-diving into <strong class="text-white">Data Science & Machine Learning</strong> to build a <strong class="text-white">high-performance project for real-world sustainability data power.</strong>.
                 </p>
             </div>
         </section>
@@ -431,13 +431,13 @@
                 
                 <!-- Social Links -->
                 <div class="mt-16 flex justify-center space-x-8">
-                    <a href="httpsis://github.com/your-username" class="text-slate-400 hover:text-white transition-colors">
+                    <a href="https://github.com/kaushtubgautam" class="text-slate-400 hover:text-white transition-colors">
                         <i class="ph ph-github-logo text-4xl"></i>
                     </a>
-                    <a href="httpsis://linkedin.com/in/your-username" class="text-slate-400 hover:text-white transition-colors">
+                    <a href="https://www.linkedin.com/in/kaushtubgautam/" class="text-slate-400 hover:text-white transition-colors">
                         <i class="ph ph-linkedin-logo text-4xl"></i>
                     </a>
-                    <a href="httpsis://twitter.com/your-username" class="text-slate-400 hover:text-white transition-colors">
+                    <a href="https://x.com/nobatmanindia" class="text-slate-400 hover:text-white transition-colors">
                         <i class="ph ph-twitter-logo text-4xl"></i>
                     </a>
                 </div>
