--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                 </div>
                 
                 <div class="mt-16 bubble-container">
-                    <div class="bubble">A.I. & ML</div>
+                    <div class="bubble">ML & Data Science</div>
                     <div class="bubble">Web3 & Blockchain</div>
                     <div class="bubble">Sustainability Tech</div>
                     <div class="bubble">Full-Stack Dev</div>
