--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 
                 <p class="mt-6 max-w-xl mx-auto text-lg sm:text-xl text-slate-300">
                     I'm an innovator and builder at the intersection of
-                    <strong class="text-white">A.I.</strong>, 
+                    <strong class="text-white">A.I</strong>, 
                     <strong class="text-white">Web3</strong>, and 
                     <strong class="text-white">Sustainability</strong>.
                 </p>
